--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "history": "^5.0.0",
+    "jquery": "^3.5.1",
+    "jsdom": "^16.4.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3"
+    "react-scripts": "^3.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
