--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "history": "^5.0.0",
     "jquery": "^3.5.1",
     "jsdom": "^16.4.0",
+    "popper": "^1.0.1",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
